--- a/backend/package.json
+++ b/backend/package.json
@@ -12,11 +12,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.3.4"
   },
   "devDependencies": {
     "colors": "^1.4.0",
+    "morgan": "^1.10.0",
     "nodemon": "^3.1.0"
   }
 }
