--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "cloudinary": "^2.2.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.4",
     "multer": "^1.4.5-lts.1",
     "uuid": "^9.0.1"
