--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.4",
     "multer": "^1.4.5-lts.1",
+    "slugify": "^1.6.6",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
